--- a/src/app/work-space/bottom-bar/bottom-bar.component.html
+++ b/src/app/work-space/bottom-bar/bottom-bar.component.html
@@ -4,9 +4,9 @@
             Citas Recuperadas
         </h4>
         <div class="bottombar-actions">
-            <span class="glyphicon glyphicon-refresh" (click)="onRefresh()"></span>
+            <!--<span class="glyphicon glyphicon-refresh" (click)="onRefresh()"></span>-->
+            <span class='bottombar-close glyphicon glyphicon-remove' (click)='onClose()'></span>
         </div>
-        <span class='bottombar-close glyphicon glyphicon-remove' (click)='onClose()'></span>
     </div>
     <div class="col-sm-2 bottombar">
         <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true" style="height:100%">
