--- a/src/app/work-space/bottom-bar/retrieved-quotes-list/retrieved-quote-item/retrieved-quote-item.component.html
+++ b/src/app/work-space/bottom-bar/retrieved-quotes-list/retrieved-quote-item/retrieved-quote-item.component.html
@@ -1,4 +1,4 @@
-<div class="panel-heading modal-header" role="tab" id="headingOne">
+<div class="panel-heading" role="tab" id="headingOne">
 </div>
 <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
   {{retrievedQuote.getText()}}
