--- a/src/app/work-space/popup-window/simple-query-editor/simple-query-editor.component.html
+++ b/src/app/work-space/popup-window/simple-query-editor/simple-query-editor.component.html
@@ -1,5 +1,5 @@
  
-<div class="container modal-content">
+<div class="popup-container modal-content">
   <div>
     <div class="panel-heading modal-header">
       <h5 class="modal-title">Búsqueda Simple</h5>
