--- a/src/app/my-projects/project-share-modal/project-share-modal.component.css
+++ b/src/app/my-projects/project-share-modal/project-share-modal.component.css
@@ -39,3 +39,8 @@ input.ng-pristine.ng-untouched.ng-invalid {
     border-color: #7c3131a1 !important;
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(169, 68, 66, .6) !important;
 }
+
+.container-fluid {
+    padding-left: 0;
+    padding-right: 0;
+  }
