--- a/src/app/work-space/popup-window/popup-window.component.html
+++ b/src/app/work-space/popup-window/popup-window.component.html
@@ -1,6 +1,6 @@
 <div class="drag-block container" [zIndex]="10000" 
-  style="position:absolute;right:20%; top:15%;"
-  [ngStyle]="{width: width}" [handle]="myHandle"
+  style="position:absolute;"
+  [ngStyle]="{'width': width, 'right': right, 'top': top}" [handle]="myHandle"
   ngDraggable>
   <ng-template #dynamic></ng-template>
 </div>
