--- a/src/app/work-space/side-bar/code-list/code-list.component.css
+++ b/src/app/work-space/side-bar/code-list/code-list.component.css
@@ -15,3 +15,16 @@
 .action-selected {
     color: red;
 }
+
+.form-control {
+    height: 30px;
+}
+
+.form-control:focus {
+    border-color: #aeafb1;
+}
+
+.btn {
+    height: 30px;
+    padding-top: 3px !important;
+}
