--- a/src/styles.css
+++ b/src/styles.css
@@ -43,6 +43,19 @@ html {
     padding-right: 0px !important;
 }
 
+::-webkit-scrollbar {
+    width: 3px;
+    /* remove scrollbar space */
+    height: 3px;
+    background: transparent;
+    /* optional: just make scrollbar invisible */
+}
+/* optional: show position indicator in red */
+
+::-webkit-scrollbar-thumb {
+    background:  #2c3e50;
+}
+
 .sk-folding-cube {
     margin: 20px auto;
     width: 40px;
