--- a/src/app/work-space/popup-window/popup-window.component.html
+++ b/src/app/work-space/popup-window/popup-window.component.html
@@ -1,4 +1,4 @@
-<div class="drag-block container" [zIndex]="10000" 
+<div class="drag-block container"
   style="position:absolute;"
   [ngStyle]="{'width': width, 'right': right, 'top': top}" [handle]="myHandle"
   ngDraggable>
