search f with window find

--- a/src/app/work-space/popup-window/search-in-open-docs/search-in-open-docs.component.html
+++ b/src/app/work-space/popup-window/search-in-open-docs/search-in-open-docs.component.html
@@ -13,8 +13,8 @@
                     </div>
                 </form>
                 <div class="buttons" style="float:right">
-                    <button (click)="showPrevious()" class="btn btn-success"><i class="fa fa-arrow-up" aria-hidden="true"></i> </button>
-                    <button (click)="showNext()" class="btn btn-success"><i class="fa fa-arrow-down" aria-hidden="true"></i> </button>
+                    <button (click)="showPrevious(f.value)" class="btn btn-success"><i class="fa fa-arrow-up" aria-hidden="true"></i> </button>
+                    <button (click)="showNext(f.value)" class="btn btn-success"><i class="fa fa-arrow-down" aria-hidden="true"></i> </button>
                 </div>
             </div>
         </div>
