--- a/src/app/work-space/work-space.component.html
+++ b/src/app/work-space/work-space.component.html
@@ -1,4 +1,4 @@
-<div class="row content">
+<div class="row content" style="height: 100%">
     <app-side-bar></app-side-bar>
     <app-content></app-content>
     <app-popup-window *ngIf="showPopup"></app-popup-window>
