--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -35,6 +35,9 @@
                         <li [ngClass]="{ 'disabled':  permissions && !permissions.includes('create_code')}">
                             <a class="header-btn" (click)="onNewCode()">Nuevo código</a>
                         </li>
+                        <li [ngClass]="{ 'disabled':  permissions && !permissions.includes('import_codes')}">
+                            <a class="header-btn" (click)="onImportCodes()">Importar códigos de otro proyecto</a>
+                        </li>
                     </ul>
                 </li>
                 <li class="dropdown">
