--- a/src/app/my-projects/projects/projects.component.html
+++ b/src/app/my-projects/projects/projects.component.html
@@ -78,7 +78,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr app-project-item *ngFor="let proj of mf.data" [project]="proj">
+                        <tr app-project-item *ngFor="let proj of mf.data" [project]="proj" [toImportCodes]="false">
                         </tr>
                     </tbody>
                     <tfoot>
