--- a/src/app/work-space/side-bar/document-list/document-list.component.html
+++ b/src/app/work-space/side-bar/document-list/document-list.component.html
@@ -8,8 +8,8 @@
             (click)="onSelectAll()" [(ngClass)]="selectAllClass"></span>
         </div>
     </div>
-    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-        <div class="panel-body"  style="overflow:auto;max-height:270px">
+    <div id="collapseOne" class="panel-collapse collapse in doc-panel-collapse" role="tabpanel" aria-labelledby="headingOne">
+        <div class="panel-body"  style="overflow:auto; height:100%; padding-bottom:0px">
             <ul class="document-list">
                 <app-document-item *ngFor="let doc of documents" [document]="doc"></app-document-item>
             </ul>
