quote display bug fixes

--- a/src/app/work-space/content/documents/document-content/document-content.component.css
+++ b/src/app/work-space/content/documents/document-content/document-content.component.css
@@ -97,7 +97,7 @@ s {
   /* Gecko Browsers */
 }
 
-code-name-container {
+.code-name-container {
   overflow: hidden;
   text-overflow: ellipsis;
 }
