--- a/src/app/work-space/popup-window/search-in-open-docs/search-in-open-docs.component.html
+++ b/src/app/work-space/popup-window/search-in-open-docs/search-in-open-docs.component.html
@@ -9,7 +9,7 @@
                 <form #f="ngForm" (ngSubmit)="onFormSubmit(f.value)" novalidate class="form-inline" style="display:inline">
                     <div class=" field input-group form-group">
                         <span class="input-group-addon"> <i class="fa fa-search" aria-hidden="true"></i> </span>
-                        <input type="text" class="form-control" [(ngModel)]="searchtext" (ngModelChange)="valuechange($event)" name="searchtext">
+                        <input autofocus type="text" class="form-control" [(ngModel)]="searchtext" (ngModelChange)="valuechange($event)" name="searchtext">
                     </div>
                 </form>
                 <div class="buttons" style="float:right">
