--- a/src/app/work-space/bottom-bar/retrieved-quotes-list/retrieved-quote-item/retrieved-quote-item.component.css
+++ b/src/app/work-space/bottom-bar/retrieved-quotes-list/retrieved-quote-item/retrieved-quote-item.component.css
@@ -41,6 +41,5 @@
 }
 
 .watched-quote {
-  background-color: #2c3e50 !important;
-  color: white;
+  background-color: rgb(217,207,207) !important;
 }
