--- a/src/app/header/import-codes-modal/import-codes-modal.component.html
+++ b/src/app/header/import-codes-modal/import-codes-modal.component.html
@@ -21,7 +21,7 @@
               </thead>
               <tbody>
                   <tr app-project-item *ngFor="let proj of mf.data" [project]="proj" 
-                  [toImportCodes]="true" (click)="onSelectProject(proj._id)" 
+                  [toImportCodes]="true" (click)="onSelectProject(proj)" 
                   [ngClass]="actualProject===proj._id ? 'actual-proj' : (proj._id===projId?'selected-proj' : '')">
                   </tr>
               </tbody>
