--- a/src/app/work-space/popup-window/simple-query-editor/simple-query-editor.component.html
+++ b/src/app/work-space/popup-window/simple-query-editor/simple-query-editor.component.html
@@ -1,4 +1,3 @@
- 
 <div class="popup-container modal-content">
   <div>
     <div class="panel-heading modal-header">
@@ -8,27 +7,21 @@
     <div class="panel-body">
       <div class="col-sm-12">
         <form #f="ngForm" (ngSubmit)="onFormSubmit(f.value)" novalidate>
-            <div class="field">   
-                <input type="checkbox"  
-                  id="actDocsInput"
-                  name="adocs" 
-                  [(ngModel)]="activatedDocs">
-                  <label for="actDocsInput">Solo Documentos Activados</label> 
-                  <br> 
-             </div>
-             <hr class='divider'>
-            <div class="field">   
-                <input type="checkbox"  
-                  id="actCodesInput"
-                  name="acodes"  
-                  [(ngModel)]="activatedCodes">
-                  <label for="actCodesInput">Solo Códigos Activados</label> 
-                  <br> 
-             </div>            
-            <div class="buttons">
-              <button type="submit" class="btn btn-success">Buscar</button>
-            </div>            
-        </form>       
+          <div class="field">
+            <input type="checkbox" id="actDocsInput" name="adocs" [(ngModel)]="activatedDocs">
+            <label for="actDocsInput">Solo Documentos Activados</label>
+            <br>
+          </div>
+          <hr class='divider'>
+          <div class="field">
+            <input type="checkbox" id="actCodesInput" name="acodes" [(ngModel)]="activatedCodes">
+            <label for="actCodesInput">Solo Códigos Activados</label>
+            <br>
+          </div>
+          <div class="buttons">
+            <button type="submit" class="btn btn-success">Buscar</button>
+          </div>
+        </form>
       </div>
     </div>
   </div>
