--- a/src/app/work-space/popup-window/popup-window.component.html
+++ b/src/app/work-space/popup-window/popup-window.component.html
@@ -1,5 +1,6 @@
 <div class="drag-block container"
   style="position:absolute;"
+  [preventDefaultEvent]="false"
   [zIndex]="1"
   [ngStyle]="{'width': width, 'right': right, 'top': top}" [handle]="myHandle"
   ngDraggable>
