--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,7 +6,9 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" routerLink='/myprojects'>FingQDA</a>
+            <a class="navbar-left" style="max-width:250px" routerLink='/myprojects'>
+                <img class="img-responsive logo-header" src="assets/images/logo_dark.png">
+            </a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav" *ngIf="router.url.includes('workspace')">
