--- a/src/app/work-space/side-bar/document-list/document-list.component.html
+++ b/src/app/work-space/side-bar/document-list/document-list.component.html
@@ -4,12 +4,11 @@
             Documentos
         </h4>
         <div class="actions pull-right">
-            <span class="glyphicon glyphicon-list-alt" [title]="noSelection ? 'Activar Todos' : 'Desactivar Todos'"
-            (click)="onSelectAll()" [(ngClass)]="selectAllClass"></span>
+            <span class="glyphicon glyphicon-list-alt" [title]="noSelection ? 'Activar Todos' : 'Desactivar Todos'" (click)="onSelectAll()" [(ngClass)]="selectAllClass"></span>
         </div>
     </div>
     <div id="collapseOne" class="panel-collapse collapse in doc-panel-collapse" role="tabpanel" aria-labelledby="headingOne">
-        <div class="panel-body"  style="overflow:auto; height:100%; padding-bottom:0px">
+        <div class="panel-body" style="overflow:auto; height:100%; padding-bottom:0px">
             <ul class="document-list">
                 <app-document-item *ngFor="let doc of documents" [document]="doc"></app-document-item>
             </ul>
