style fixes in share and import codes modals

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,8 +6,8 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-left" style="max-width:250px" routerLink='/myprojects'>
-                <img class="img-responsive logo-header" src="assets/images/logo_dark.png">
+            <a class="navbar-left" style="max-width:50px" routerLink='/myprojects'>
+                <img class="img-responsive" src="assets/images/logo.png">
             </a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
