--- a/src/app/my-projects/project-share-modal/project-share-modal.component.html
+++ b/src/app/my-projects/project-share-modal/project-share-modal.component.html
@@ -3,7 +3,7 @@
         <span class='btn-close glyphicon glyphicon-remove' (click)='onClose()'></span>
         <h5 class="modal-title">Compartir proyecto {{project.name}}</h5>
     </div>
-    <div class="row panel-body">
+    <div class=" panel-body">
         <form #collForm="ngForm" *ngIf="active">
             <div class="col-md-7">
                 <div class="input-group form-group">
@@ -21,20 +21,19 @@
             </div>
             <div class="col-md-1">
                 <div class=" form-group">
-                    <button style="margin: 4px 0px;" type="button" class="btn btn-info" (click)="onAddEmail()" [disabled]="!collForm.form.valid"> 
+                    <button type="button" class="btn btn-info" (click)="onAddEmail()" [disabled]="!collForm.form.valid"> 
                             <i class="fa fa-plus" aria-hidden="true"></i> 
                          </button>
                 </div>
             </div>
         </form>
+        <ul class="list-group">
+            <li class="list-group-item" *ngFor="let col of listCols; let i=index; ">
+                {{col.email}} <small>( {{col.role}} ) </small>
+                <button type="button" class="btn btn-danger btn-delete-mail" (click)="onRemoveEmail(i)"> <i class="fa fa-times" aria-hidden="true"></i> </button>
+            </li>
+        </ul>
     </div>
-    <br>
-    <ul class="list-group">
-        <li class="list-group-item" *ngFor="let col of listCols; let i=index; ">
-            {{col.email}} <small>( {{col.role}} ) </small>
-            <button type="button" class="btn btn-danger btn-delete-mail" (click)="onRemoveEmail(i)"> <i class="fa fa-times" aria-hidden="true"></i> </button>
-        </li>
-    </ul>
 </div>
 <div class="modal-footer text-center ">
     <button type="button " class="btn btn-success " (click)="onSaveCollaborators() "> Guardar </button>
