--- a/src/app/my-projects/project-share-modal/project-share-modal.component.css
+++ b/src/app/my-projects/project-share-modal/project-share-modal.component.css
@@ -43,4 +43,9 @@ input.ng-pristine.ng-untouched.ng-invalid {
 .container-fluid {
     padding-left: 0;
     padding-right: 0;
-  }
+}
+
+.list-group {
+    float: left;
+    width: 100%;
+}
