--- a/src/app/my-projects/projects/project-item/project-item.component.css
+++ b/src/app/my-projects/projects/project-item/project-item.component.css
@@ -3,7 +3,7 @@
 }
 
 .btn-delete {
-    padding: 2px 5px !important;
+    padding: 2px 7px !important;
 }
 
 .lbl-hover {
@@ -13,5 +13,5 @@
 }
 
 .btn {
-    padding: 5px 10px !important;
+    padding: 5px 10px;
 }
