--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,9 +6,13 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-left" style="max-width:50px" routerLink='/myprojects'>
-                <img class="img-responsive" src="assets/images/logo.png">
+            <a class="navbar-left" style='padding: 10px 0px;' routerLink='/myprojects '>
+                <img class="img-responsive" style="height: 40px;float:left" src="assets/images/logo.png">
             </a>
+            <a class="navbar-brand" routerLink='/myprojects '>
+                Qode
+            </a>
+
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav" *ngIf="router.url.includes('workspace')">
@@ -60,7 +64,6 @@
                         <li><a class="header-btn" (click)="onCodeMatrix(true)">Matriz de co-ocurrencia de códigos</a></li>
                     </ul>
                 </li>
-                <li><a href="#" data-toggle="modal" data-target="#exampleModal">Visualización</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a routerLink='/myprojects' *ngIf="this.authsvc.isAuthenticated() && router.url.includes('workspace')"> Mis Proyectos </a></li>
