--- a/src/app/home/login/login.component.css
+++ b/src/app/home/login/login.component.css
@@ -7,6 +7,10 @@
     letter-spacing: 2px;
 }
 
+.title h1 {
+    font-size: 58px;
+}
+
 .pen-title h1 {
     margin: 0 0 20px;
     font-size: 48px;
@@ -35,7 +39,7 @@
     background: #ffffff;
     max-width: 320px;
     width: 100%;
-    border-top: 5px solid #18bc9c;
+    border-top: 5px solid #2c3e50;
     box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
     margin: 0 auto;
 }
