--- a/src/app/home/signup/signup.component.html
+++ b/src/app/home/signup/signup.component.html
@@ -1,5 +1,5 @@
 <div class="title">
-    <img class="img-responsive logo" src="assets/images/appname.png">
+    <h1> Qode </h1>
 </div>
 <div class="module form-module">
     <div class="">
