syles, copy option, calculate column count

--- a/src/app/my-projects/projects/projects.component.html
+++ b/src/app/my-projects/projects/projects.component.html
@@ -9,7 +9,7 @@
             <input #descProject type="text" class="form-control" placeholder="Descripción">
         </div>
 
-        <span class="col-md-2 input-group-btn" style="margin-left:0%; padding-left:0px;">
+        <span class="col-md-2 input-group-btn">
             <button class="btn btn-success" type="button" (click)="onCreateProject()" style="height: 40px;"> 
                 <i class="fa fa-plus" aria-hidden="true"></i> 
                 Crear
