--- a/src/app/work-space/popup-window/search-in-open-docs/search-in-open-docs.component.html
+++ b/src/app/work-space/popup-window/search-in-open-docs/search-in-open-docs.component.html
@@ -19,5 +19,6 @@
                 </div>
             </div>
         </div>
+        <p *ngIf="noResult"> No hay resultados para la busqueda </p>
     </div>
 </div>
