--- a/src/app/home/login/login.component.css
+++ b/src/app/home/login/login.component.css
@@ -31,6 +31,14 @@
     text-decoration: none;
 }
 
+.btn-link {
+    color: #2c3e50;
+}
+
+.form-module label {
+    float: left;
+}
+
 
 /* Form Module */
 
@@ -94,7 +102,7 @@
 
 .form-module h2 {
     margin: 0 0 20px;
-    color: #18bc9c;
+    color: #50565c;
     font-size: 18px;
     font-weight: 400;
     line-height: 1;
@@ -216,17 +224,17 @@ body {
 
 .loginBtn--google {
     /*font-family: "Roboto", Roboto, arial, sans-serif;*/
-    background: #DD4B39;
+    background: #3986abcf;
 }
 
 .loginBtn--google:before {
-    border-right: #BB3F30 1px solid;
+    border-right: #3986abcf 1px solid;
     background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/14082/icon_google.png') 6px 6px no-repeat;
 }
 
 .loginBtn--google:hover,
 .loginBtn--google:focus {
-    background: #E74B37;
+    background: #246481cf;
 }
 
 .login-error {
