--- a/src/app/home/signup/signup.component.css
+++ b/src/app/home/signup/signup.component.css
@@ -31,6 +31,18 @@
     text-decoration: none;
 }
 
+.btn-link {
+    color: #2c3e50;
+}
+
+.form-module label {
+    float: left;
+}
+
+.form-group {
+    margin-bottom: 0px;
+}
+
 
 /* Form Module */
 
@@ -94,7 +106,7 @@
 
 .form-module h2 {
     margin: 0 0 20px;
-    color: #18bc9c;
+    color: #50565c;
     font-size: 18px;
     font-weight: 400;
     line-height: 1;
