hide complex search, fix in new code input

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -52,9 +52,9 @@
                         <li [ngClass]="{ 'disabled': permissions && !permissions.includes('search_activated_quotes')}">
                             <a class="header-btn" (click)="onSimpleQuery()">Búsqueda Simple</a>
                         </li>
-                        <li [ngClass]="{ 'disabled': permissions && !permissions.includes('search_activated_quotes')}">
+                        <!-- <li [ngClass]="{ 'disabled': permissions && !permissions.includes('search_activated_quotes')}">
                             <a class="header-btn" (click)="onComplexQuery()">Búsqueda Compleja</a>
-                        </li>
+                        </li> -->
                     </ul>
                 </li>
                 <li class="dropdown">
