control or command plus click in document item to activate

--- a/src/app/work-space/side-bar/document-list/document-item/document-item.component.html
+++ b/src/app/work-space/side-bar/document-list/document-item/document-item.component.html
@@ -1,4 +1,4 @@
-<li (contextmenu)="onContextMenu($event)" [ngClass]="getItemClass()" style="cursor: pointer" (dblclick)="onOpenDocument()">
+<li (contextmenu)="onContextMenu($event)" [ngClass]="getItemClass()" style="cursor: pointer" (dblclick)="onOpenDocument()" (click)="onClickListLine($event)">
     <div [attr.title]="document.memo">
         <span *ngIf="permissions.includes('activate_document') && document.isActivated()" class="glyphicon glyphicon-arrow-right list-pointer" (click)="onDeactivateDocument()">
     </span>
