--- a/src/styles.css
+++ b/src/styles.css
@@ -21,18 +21,16 @@ html {
 
 .btn-close {
     position: absolute !important;
-    right: 4px;
-    top: 8px !important;
+    right: 0;
     padding: 2px;
     color: #9d9f9e;
-    cursor: pointer;
 }
 
 .panel {
     border: 0.5px solid gray;
     box-shadow: 0px 0px 10px 5px #888888;
-}
-
+  }
+  
 .panel-heading {
     background-color: #2c3e50;
     color: white;
@@ -41,6 +39,7 @@ html {
 .container-fluid {
     margin-right: auto;
     margin-left: auto;
+    
 }
 
 ::-webkit-scrollbar {
@@ -50,12 +49,10 @@ html {
     background: transparent;
     /* optional: just make scrollbar invisible */
 }
-
-
 /* optional: show position indicator in red */
 
 ::-webkit-scrollbar-thumb {
-    background: #2c3e50;
+    background:  #2c3e50;
 }
 
 .sk-folding-cube {
@@ -168,8 +165,10 @@ html {
     width: 8px;
     height: 8px;
 }
+ 
 
+ 
 *::-webkit-scrollbar-thumb {
-    background-color: darkgrey;
-    outline: 1px solid slategrey;
+  background-color: darkgrey;
+  outline: 1px solid slategrey;
 }
