fix mas doc length in lines

--- a/src/app/work-space/content/documents/document-content/document-content.component.html
+++ b/src/app/work-space/content/documents/document-content/document-content.component.html
@@ -1,5 +1,4 @@
-<!-- <div class="content-container" (scroll)="onScroll($event)"> -->
-<div class="content-container">
+<div class="content-container" (scroll)="onScroll($event)">
   <table class="page-container">
     <tr *ngFor="let line of aux; let l = index" [id]="l" [ngClass]="'linea' + l">
       <td style="width: 100px">
