password requirements updated, shortcuts for faster coding

--- a/src/app/home/signup/signup.component.html
+++ b/src/app/home/signup/signup.component.html
@@ -15,8 +15,8 @@
             </div>
             <div class="form-group">
                 <label for="password">Contraseña
-                    <span class='glyphicon glyphicon-info-sign' style="color:rgb(27,175,27)"
-                    title="La contraseña debe tener al menos 8 caracteres y cumplir con 3 de las cuatro reglas siguientes: mayúsculas, minúsculas, números y/o caracteres especiales."
+                    <span class='glyphicon glyphicon-info-sign' style="color:#3986abcf"
+                    title="La contraseña debe tener al menos 8 caracteres e incluir al menos una letra minúscula, una letra mayúscula y un número."
                     ></span>
                 </label>
                 <input type="password" class="form-control" name="password" [(ngModel)]="model.password" required app-validateEqual="confirmPassword" app-reverse="true" #password="ngModel" placeholder="Contraseña">
